docs: Add samples for using timestamps with BQStorage Read and Write API (#3167)
* chore: Add samples showcases reading a timestamp value from public dataset

* docs: Add samples for using timestamps with BQStorage Read and Write API

* chore: Add missing header

* chore: Remove fmt plugin in samples

* chore: Fix samples lint issues

* chore: Add ITs for the added samples

* chore: Fix commented out nested samples

* chore: Address code comments

* chore: Address code comments

* chore: Use long for expectedRowCount

* chore: Fix checkstyle issue